<resources>
    <string name="app_name">Entradas</string>
    <string name="search">Buscar</string>
    <string name="content_description">contentDescription</string>
    <string name="error">Error</string>
    <string name="save">Guardar</string>
    <string name="title">Titulo</string>
    <string name="author">Autor</string>
    <string name="date">Fecha de publicación</string>
    <string name="content">Contenido</string>

</resources>